fix submit button contrast

--- a/beta/static/style.css
+++ b/beta/static/style.css
@@ -139,3 +139,9 @@ nav button:hover, button:focus, nav a:hover, nav a:focus {
 .options {
     border: none;
 }
+
+button[type=submit]{
+    background-color: darkslateblue;
+    border: none;
+    padding: 8px 16px;
+}
